horizontal scrollbar bug
git-svn-id: http://svn.ccnmtl.columbia.edu/envirocon/trunk@17079 1f418930-7ff8-0310-b8ad-c653122473bc

--- a/media/css/game.css
+++ b/media/css/game.css
@@ -579,6 +579,6 @@ padding: 0 10px 10px 10px;
   padding:6px 4px 4px 4px;
 
   /*IE insists on making that box small. so this doesn't work, but someday!  SOMEDAY!!! */
-  width:100%;
+  width:95%;
  }
 
